# RabbitVar

./: CMakeLists.txt  COPYING  Configuration.cpp  Configuration.h  CurrentSegment.h  Launcher.cpp  Launcher.h  Makefile  README.md  Region.h  RegionBuilder.cpp  RegionBuilder.h  Sclip.h  SortPositionSclip.h  TODOlist.org  ToVarsBuilder.cpp  ToVarsBuilder.h  Variant.h  Variation.h  VariationMap.h  VariationRealigner.cpp  VariationRealigner.h  VariationUtils.h  Vars.h  cigarModifier.cpp  cigarModifier.h  cmdline.h  cmdparser.py  compare.py  germline_filter.sh  hg19_wgs.bed  install.sh  omp_run_vc.sh  parseCigar.cpp  parseCigar.h  patterns.h  recordPreprocessor.cpp  recordPreprocessor.h  run_rabbitvar.py  run_vc.sh  (+4 more)
DatasetDesc/: DatasetDesc.org
RandomForest/: call_and_hap.sh  call_rf.py  call_rf_tumoronly.py  make_data.py  make_data_tumoronly.py  train_call.sh  train_random_forest.ipynb  train_rf.py  train_rf_tumoronly.py
RandomForest/Paper/: ROC_curve.ipynb  ResultVisualization.ipynb  runtime_depth.org  runtime_depth_hiconfreg.org  valide_by_af.py  wgs_diff_purity.org  wgs_diff_sample.org
RandomForest/models/: somIndel_notbalanced_nodownsample_5truth_positvlg0d2.pkl  somSNV_notbalanced_nodownsample_5truth_positvlg0d2.pkl  somatic_indel_downsample0d1.pkl  somatic_indel_downsample0d5.pkl  somatic_snv_downsample0d02.pkl  somatic_snv_downsample0d2.pkl
TrainTestData/: downsample_tsv.py  jval.py  make_data_new.py  makedata_HCC1395_ALL.sh  makedata_more_feature.sh
XGBoost/: call_xgboost.py  make_data_new.py  train_xgb.py
data/: BaseInsertion.h  Reference.h  data_pool.h
include/: Cluster.h  Configuration.h  CurrentSegment.h  Launcher.h  Mate.h  RegionBuilder.h  Sclip.h  ToVarsBuilder.h  Variant.h  Variation.h  VariationMap.h  VariationRealigner.h  VariationUtils.h  Vars.h  back_realigner.h  cigarModifier.h  cmdline.h  debug.h  global.h  parseCigar.h  patterns.h  recordPreprocessor.h  robin_hood.h  util.h  version.h
include/data/: BaseInsertion.h  Match35.h  Reference.h
include/modes/: ampliconMode.h  cyclequeue.h  simpleMode.h  somaticMode.h
include/scopedata/: AlignedVarsData.h  CombineAnalysisData.h  InitialData.h  RealignedVariationData.h  VariationData.h
modes/: ampliconMode.cpp  simpleMode.cpp  simpleMode.h  somaticMode.cpp  somaticMode.h
scopedata/: AlignedVarsData.h  InitialData.h  RealignedVariationData.h  Scope.h  VariationData.h
scripts/: B17NC_filter.sh  format_germ.sh  format_somat.sh  germ_omp_run.sh  germline_filter.sh  get_intersection.py  jugde_inregion.py  omp_run_vc.sh  run_tools.sh  run_vc.sh  snpeff_filter.sh  somat_test_result.txt  somatic_filter.sh  somatic_omp_run.sh  thread_scal_test.sh  tmp2.vcf  var2vcf_paired.pl
src/: Launcher.cpp  RegionBuilder.cpp  ToVarsBuilder.cpp  Variant.cpp  VariationRealigner.cpp  back_realigner.cpp  cigarModifier.cpp  parseCigar.cpp  recordPreprocessor.cpp
src/modes/: ampliconMode.cpp  simpleMode.cpp  somaticMode.cpp
src/modes/back_threadPool/: simpleMode.cpp  simpleMode.h
utils/: Global.py  __init__.py  datautil.py  features.py  truth.py  vcf_writer.py
